# MedQUAD-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml
evaluation/: eval_results.json  evaluate.py  goldens.json
evaluation/models/: github_model.py
scripts/: ingest_documents.py
src/: config.py
src/api/: main.py
src/api/v1/: router.py
src/api/v1/endpoints/: chat.py  health.py
src/embeddings/: base_embedder.py  cache.py  github_embedder.py  ollama_embedder.py
src/guardrails/: guardrails.py
src/ingestion/: ingestion.py
src/llm/: base_llm.py  github_llm.py  ollama_llm.py
src/prompts/: prompt_templates.py
src/rag/: models.py  pipeline.py
src/utils/: container.py  logger.py
src/vector_store/: qdrant_store.py
