[project]
name = "medquad-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "guardrails-ai>=0.10.2",
    "ipykernel>=7.3.0",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-qdrant>=1.1.0",
    "langfuse>=4.9.1",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "qdrant-client>=1.18.0",
    "redis>=8.0.0",
    "sentence-transformers>=5.6.0",
    "structlog>=26.1.0",
    "tokenizer>=3.6.2",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "unicorn>=2.1.4",
    "uvicorn>=0.50.2",
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "deepeval>=0.21.73",
    "fakeredis>=2.23.3",
    "ruff>=0.15.20",
]

[tool.ruff.format]
indent-style = "space"
